--- a/po/es.po
+++ b/po/es.po
@@ -1,9 +1,9 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: Cloudbook\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-04-23 16:37+0000\n"
-"PO-Revision-Date: 2015-03-23 17:17+0100\n"
+"POT-Creation-Date: 2015-04-28 11:32+0000\n"
+"PO-Revision-Date: 2015-04-28 14:04+0100\n"
 "Last-Translator: kbut <raurodse@gmail.com>\n"
 "Language-Team: Spanish\n"
 "Language: es\n"
@@ -11,24 +11,100 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 1.5.4\n"
+
+#: src/components/core/audio/core.js:44
+#: src/components/core/whiteboard/core.js:61
+msgid "Click to listen a sound"
+msgstr "Presiona para escuchar un sonido"
+
+#: src/components/core/audio/core.js:69 src/components/core/flash/core.js:69
+#: src/components/core/images/core.js:94
+#: src/components/core/includesite/core.js:68
+#: src/components/core/interactivemultioption/core.js:47
+#: src/components/core/interactiveoneoption/core.js:50
+#: src/components/core/jclic/core.js:34 src/components/core/video/core.js:67
+#: src/components/core/youtube/core.js:72 src/js/lib/gui/menu.js:319
+msgid "Insert"
+msgstr "Insertar"
+
+#: src/components/core/fillinthegaps/core.js:11
+#: src/components/core/interactivemultioption/core.js:11
+#: src/components/core/interactiveoneoption/core.js:11
+msgid "Description of your activity"
+msgstr "Descripción de tu actividad"
+
+#: src/components/core/flash/core.js:55
+msgid "Click to view interactive Flash resource"
+msgstr "Presiona para ver el recurso interactivo Flash"
+
+#: src/components/core/includesite/core.js:43
+msgid "Click to view resource"
+msgstr "Presiona para ver el recurso"
+
+#: src/components/core/interactivemultioption/core.js:52
+#: src/components/core/interactiveoneoption/core.js:55
+msgid "Correct option"
+msgstr "Opción correcta"
+
+#: src/components/core/interactivemultioption/core.js:54
+#: src/components/core/interactiveoneoption/core.js:57
+msgid "Option "
+msgstr "Opción"
+
+#: src/components/core/interactivemultioption/core.js:158
+#: src/components/core/interactiveoneoption/core.js:162
+msgid "Option A"
+msgstr "Opción A"
+
+#: src/components/core/url/core.js:65
+msgid "Click view site "
+msgstr "Presiona para ver la web"
+
+#: src/components/core/video/core.js:44
+msgid "Click to view a video"
+msgstr "Presiona para ver el video"
+
+#: src/components/core/youtube/core.js:62
+msgid "Click view youtube video"
+msgstr "Presiona para ver el vídeo de youtube"
+
+#: src/js/lib/core/backend/core.js:433
+msgid "New version available :"
+msgstr "Nueva versión disponible:"
+
+#: src/js/lib/core/components/cbobject.js:102
+#: src/js/lib/core/components/cbobject.js:150
+#: src/js/lib/gui/dialogMetadata.js:90
+#: src/templates/exportEpubProject.wizard.hbs:9
+#: src/templates/exportHtmlProject.wizard.hbs:3
+#: src/templates/exportPdfProject.wizard.hbs:20
+#: src/templates/exportWebZipProject.wizard.hbs:2
+#: src/templates/initialwizard.importprojects.hbs:5
+#: src/templates/initialwizard.step2.hbs:5
+msgid "Cancel"
+msgstr "Cancelar"
+
+#: src/js/lib/core/components/cbobject.js:150
+#: src/js/lib/gui/ui/proview/core.js:87
+msgid "Delete"
+msgstr "Borrar"
 
 #: src/js/lib/core/components/cbsection.js:18
-#, fuzzy
 msgid "Section"
-msgstr "Nombre de seccion"
+msgstr "Sección"
 
 #: src/js/lib/core/exportHTML.js:114
 msgid "Prev"
-msgstr ""
+msgstr "Anterior"
 
 #: src/js/lib/core/exportHTML.js:114
-#, fuzzy
 msgid "Footer section"
-msgstr "Insertar subseccion"
+msgstr "Píe de la sección"
 
 #: src/js/lib/core/exportHTML.js:114
 msgid "Next"
-msgstr ""
+msgstr "Siguiente"
 
 #: src/js/lib/gui/dialogMetadata.js:14
 msgid "Dublin Core"
@@ -269,15 +345,6 @@ msgstr "Clasificaciones"
 #: src/js/lib/gui/dialogMetadata.js:85 src/templates/updateSectionName.hbs:2
 msgid "Save"
 msgstr "Guardar"
-
-#: src/js/lib/gui/dialogMetadata.js:90
-#: src/templates/exportHtmlProject.wizard.hbs:3
-#: src/templates/exportPdfProject.wizard.hbs:20
-#: src/templates/exportWebZipProject.wizard.hbs:2
-#: src/templates/initialwizard.importprojects.hbs:5
-#: src/templates/initialwizard.step2.hbs:5
-msgid "Cancel"
-msgstr "Cancelar"
 
 #: src/js/lib/gui/dialogMetadataGUIElements.js:4
 msgid "Subject"
@@ -1311,42 +1378,39 @@ msgstr "Importar"
 
 #: src/js/lib/gui/menu.js:151
 msgid "Import file ..."
-msgstr ""
+msgstr "Importar fichero..."
 
 #: src/js/lib/gui/menu.js:156
-#, fuzzy
 msgid "Import metadata"
-msgstr "Metadatos"
+msgstr "Importar metadatos"
 
-#: src/js/lib/gui/menu.js:193
-#, fuzzy
+#: src/js/lib/gui/menu.js:200
 msgid "Export"
 msgstr "Exportar"
 
-#: src/js/lib/gui/menu.js:197 src/templates/initialwizard.importprojects.hbs:3
+#: src/js/lib/gui/menu.js:204 src/templates/initialwizard.importprojects.hbs:3
 msgid "HTML5"
 msgstr "HTML5"
 
-#: src/js/lib/gui/menu.js:202
+#: src/js/lib/gui/menu.js:209
 msgid "pdf"
-msgstr ""
+msgstr "Pdf"
 
-#: src/js/lib/gui/menu.js:208
+#: src/js/lib/gui/menu.js:215
 msgid "WebZip"
-msgstr ""
+msgstr "WebZip"
 
-#: src/js/lib/gui/menu.js:268
+#: src/js/lib/gui/menu.js:220
+msgid "EPUB"
+msgstr "EPUB"
+
+#: src/js/lib/gui/menu.js:317
 msgid "File"
 msgstr "Archivo"
 
-#: src/js/lib/gui/menu.js:269
+#: src/js/lib/gui/menu.js:318
 msgid "Project"
 msgstr "Proyecto"
-
-#: src/js/lib/gui/menu.js:270
-#, fuzzy
-msgid "Insert"
-msgstr "Insertar despues"
 
 #: src/js/lib/gui/ui/proview/core.js:75
 msgid "Insert before"
@@ -1360,27 +1424,67 @@ msgstr "Insertar despues"
 msgid "Insert subsection"
 msgstr "Insertar subseccion"
 
-#: src/js/lib/gui/ui/proview/core.js:87
-msgid "Delete"
-msgstr "Borrar"
-
 #: src/js/lib/gui/ui/proview/core.js:96
 msgid "Edit"
 msgstr "Editar"
 
+#: src/templates/exportEpubProject.wizard.hbs:1
+msgid "Title of de book:"
+msgstr "Título del libro:"
+
+#: src/templates/exportEpubProject.wizard.hbs:2
+msgid "Enter the title of the book"
+msgstr "Introduce el título del libro"
+
+#: src/templates/exportEpubProject.wizard.hbs:3
+msgid "Author:"
+msgstr "Autor:"
+
+#: src/templates/exportEpubProject.wizard.hbs:4
+msgid "Enter the author of the book"
+msgstr "Introduce el autor del libro"
+
+#: src/templates/exportEpubProject.wizard.hbs:5
+msgid "Publisher:"
+msgstr "Editor:"
+
+#: src/templates/exportEpubProject.wizard.hbs:6
+msgid "Enter the publisher of the book"
+msgstr "Introduce el editor del libro"
+
+#: src/templates/exportEpubProject.wizard.hbs:7
+msgid "Path of the cover:"
+msgstr "Ruta del fichero para la portada:"
+
+#: src/templates/exportEpubProject.wizard.hbs:8
+msgid "Path where save of epub file:"
+msgstr "Ruta donde guardar el fichero EPUB"
+
+#: src/templates/exportEpubProject.wizard.hbs:10
+msgid "Generate EPUB"
+msgstr "Generar EPUB"
+
+#: src/templates/exportEpubProject.wizard.hbs:11
+msgid "EPUB Generation in progress. Please wait a moment..."
+msgstr "Generación del EPUB en progreso. Espere un momento por favor..."
+
+#: src/templates/exportEpubProject.wizard.hbs:12
+msgid "There was an error generating EPUB file. Please cancel the process"
+msgstr ""
+"A ocurrido un error en la generación de fichero EPUB. Por favo cancele el "
+"proceso"
+
 #: src/templates/exportHtmlProject.wizard.hbs:1
-#, fuzzy
 msgid "Path where save html project"
-msgstr "Ruta donde guardar el fichero pdf"
+msgstr "Ruta donde guardar el proyecto html"
 
 #: src/templates/exportHtmlProject.wizard.hbs:2
 msgid "Choose folder"
-msgstr ""
+msgstr "Seleccione el directorio"
 
 #: src/templates/exportHtmlProject.wizard.hbs:4
-#, fuzzy
 msgid "Generate html"
-msgstr "Generar pdf"
+msgstr "Generar html"
 
 #: src/templates/exportPdfProject.wizard.hbs:1
 msgid "Page size:"
@@ -1391,7 +1495,6 @@ msgid "Page Orientation:"
 msgstr "Orientación de página"
 
 #: src/templates/exportPdfProject.wizard.hbs:3
-#, fuzzy
 msgid "Portrait"
 msgstr "Vertical"
 
@@ -1405,7 +1508,6 @@ msgstr "Incluir encabezado de página"
 
 #: src/templates/exportPdfProject.wizard.hbs:6
 #: src/templates/exportPdfProject.wizard.hbs:14
-#, fuzzy
 msgid "Yes"
 msgstr "Si"
 
@@ -1426,21 +1528,18 @@ msgstr "Centrado"
 
 #: src/templates/exportPdfProject.wizard.hbs:10
 #: src/templates/exportPdfProject.wizard.hbs:18
-#, fuzzy
 msgid "Right"
 msgstr "Derecha"
 
 #: src/templates/exportPdfProject.wizard.hbs:11
-#, fuzzy
 msgid "Text to header page:"
-msgstr "Texto para el encabezado"
+msgstr "Texto para el encabezado:"
 
 #: src/templates/exportPdfProject.wizard.hbs:12
 msgid "Enter header page text"
 msgstr "Introduce el texto para el encabezado"
 
 #: src/templates/exportPdfProject.wizard.hbs:13
-#, fuzzy
 msgid "Include page numbers in foot page:"
 msgstr "Incluir numeración de página en el pie:"
 
@@ -1449,7 +1548,6 @@ msgid "Path where save of pdf file:"
 msgstr "Ruta donde guardar el fichero pdf"
 
 #: src/templates/exportPdfProject.wizard.hbs:21
-#, fuzzy
 msgid "Generate pdf"
 msgstr "Generar pdf"
 
@@ -1458,27 +1556,32 @@ msgid "PDF Generation in progress. Please wait a moment..."
 msgstr "Generación del PDF en progreso. Espere un momento por favor..."
 
 #: src/templates/exportPdfProject.wizard.hbs:23
+msgid "PDF Generation in progress. Copying interactive files..."
+msgstr "Generación del PDF en progreso. Espere un momento por favor..."
+
+#: src/templates/exportPdfProject.wizard.hbs:24
 msgid "There was an error generating the PDF file. Please cancel de process"
-msgstr "Ha ocurrido un error en la generación del fichero PDF. Por favor cancele el proceso"
+msgstr ""
+"Ha ocurrido un error en la generación del fichero PDF. Por favor cancele el "
+"proceso"
 
 #: src/templates/exportWebZipProject.wizard.hbs:1
-#, fuzzy
 msgid "Path where save of zip file:"
 msgstr "Ruta donde guardar el fichero zip:"
 
 #: src/templates/exportWebZipProject.wizard.hbs:3
-#, fuzzy
 msgid "Generate zip"
 msgstr "Generar zip"
 
 #: src/templates/exportWebZipProject.wizard.hbs:4
-#, fuzzy
 msgid "Zip Generation in progress. Please wait a moment..."
 msgstr "Generación del ZIP en progeso. Espere un momento por favor..."
 
 #: src/templates/exportWebZipProject.wizard.hbs:5
-msgid "There was an error generating WebZip file. Please cancel the process"
-msgstr "A ocurrido un error en la generación de fichero ZIP. Por favo cancele el proceso"
+msgid "There was an error generating WeZip file. Please cancel the process"
+msgstr ""
+"A ocurrido un error en la generación de fichero ZIP. Por favo cancele el "
+"proceso"
 
 #: src/templates/initialwizard.importprojects.hbs:1
 #: src/templates/initialwizard.step2.hbs:1
@@ -1503,9 +1606,8 @@ msgid "Open project"
 msgstr "Abrir proyecto"
 
 #: src/templates/initialwizard.step1.hbs:4
-#, fuzzy
 msgid "Import project"
-msgstr "proyecto real"
+msgstr "Importar proyecto"
 
 #: src/templates/initialwizard.step2.hbs:3
 msgid "Advanced Project"
