--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cloudbook (0.2.2) trusty; urgency=high
+
+  * add flash
+
+ -- Raul Rodrigo Segura <raurodse@gmail.com>  Wed, 29 Apr 2015 18:36:57 +0200
+
 cloudbook (0.2.1) trusty; urgency=high
 
   * Fixed bugs 
