--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cloudbook (0.2.3) trusty; urgency=high
+
+  * First version with all files needed
+
+ -- Raul Rodrigo Segura <raurodse@gmail.com>  Thu, 30 Apr 2015 19:54:48 +0200
+
 cloudbook (0.2.2) trusty; urgency=high
 
   * add flash
