--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cloudbook (0.2.3-lliurex1) trusty; urgency=high
+
+  * Added depends with chromium-codecs and adobe-flash
+
+ -- Raul Rodrigo Segura <raurodse@gmail.com>  Mon, 06 Jul 2015 13:51:57 +0200
+
 cloudbook (0.2.3) trusty; urgency=high
 
   * First version with all files needed
