--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cloudbook (0.4) UNRELEASED; urgency=high
+
+  * 
+
+ -- Raul Rodrigo Segura <raurodse@gmail.com>  Tue, 08 Sep 2015 13:23:11 +0200
+
 cloudbook (0.3) trusty; urgency=high
 
   * Removed flash and ffmpeg
